assets/css/options.css
/* Prevents scrolling in a embedded Google Maps until it is clicked */
/* http://stackoverflow.com/a/22567753/1922505 */
.overlay {
    background:transparent;
    position:relative;
    width:100%;
    height:400px; /* iframe height */
    top:400px;  /* iframe height */
    margin-top:-400px;  /* iframe height */
}

/* Bootstrap Alert */
.alert {
    padding: 15px;
    margin-bottom: 20px;
    border: 1px solid transparent;
    border-radius: 4px;
    font-size: 80%;
}
.alert h4 {
    margin-top: 0;
    color: inherit;
}
.alert .alert-link {
    font-weight: bold;
}
.alert > p,
.alert > ul {
    margin-bottom: 0;
}
.alert > p + p {
    margin-top: 5px;
}
.alert-dismissable,
.alert-dismissible {
    padding-right: 35px;
}
.alert-dismissable .close,
.alert-dismissible .close {
    position: relative;
    top: -2px;
    right: -21px;
    color: inherit;
}
.alert-success {
    color: #3c763d;
    background-color: #dff0d8;
    border-color: #d6e9c6;
}
.alert-success hr {
    border-top-color: #c9e2b3;
}
.alert-success .alert-link {
    color: #2b542c;
}
.alert-info {
    color: #31708f;
    background-color: #d9edf7;
    border-color: #bce8f1;
}
.alert-info hr {
    border-top-color: #a6e1ec;
}
.alert-info .alert-link {
    color: #245269;
}
.alert-warning {
    color: #8a6d3b;
    background-color: #fcf8e3;
    border-color: #faebcc;
}
.alert-warning hr {
    border-top-color: #f7e1b5;
}
.alert-warning .alert-link {
    color: #66512c;
}
.alert-danger {
    color: #a94442;
    background-color: #f2dede;
    border-color: #ebccd1;
}
.alert-danger hr {
    border-top-color: #e4b9c0;
}
.alert-danger .alert-link {
    color: #843534;
}

.centeredG {
    height: 400px;
    width: 400px;
    background: #eee;
    margin: 50px auto;
}

.photoCentre
{
    width: 95%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 150px;
}

.photoInfo
{
    width: 85%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
}

.img-circle {
    border-radius: 50%;
    width: 70%;
    float: left;
    margin-right: 20px
}

.photoInfo-content {
    margin-left: 20px;
    float: left;
}

.photoInfo-content-right {
    margin-left: 20px;
    float: right;
}

